syntax = "proto3";
package monitor.proto;

message MemInfo {
    // 基础内存信息（单位：GB）
    float total = 1;           // 总物理内存
    float free = 2;            // 空闲内存
    float avail = 3;           // 可用内存（包括可回收缓存）
    float buffers = 4;         // 缓冲区内存
    float cached = 5;          // 页面缓存
    float swap_cached = 6;     // 交换缓存
    
    // 内存活跃度分类
    float active = 7;          // 活跃内存
    float inactive = 8;        // 非活跃内存
    float active_anon = 9;     // 活跃匿名页
    float inactive_anon = 10;  // 非活跃匿名页
    float active_file = 11;    // 活跃文件页
    float inactive_file = 12;  // 非活跃文件页
    
    // 特殊内存状态
    float dirty = 13;          // 脏页（等待写入磁盘）
    float writeback = 14;      // 正在回写的页
    float anon_pages = 15;     // 匿名页（堆、栈等）
    float mapped = 16;         // 内存映射文件
    
    // 内核内存管理
    float kReclaimable = 17;   // 内核可回收内存
    float sReclaimable = 18;   // Slab可回收内存
    float sUnreclaim = 19;     // Slab不可回收内存
    
    // 综合指标（字段编号跳跃）
    float used_percent = 31;   // 内存使用百分比（%）
}